--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ figure .star {
     background-color: #343940;
     padding: 10px;
     border-radius: 50%;
-    margin: 20px 0 5px 0;
+    margin: 16px 0 0 0;
     width: 5%;
 }
 
